# pepy-tech-stats

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci_tests.yaml  update_table.yaml
python/pepy_tech_stats/core/: constants.py
src/: api.rs  main.rs
src/core/: domain.rs  mod.rs
src/core/adapters/: io_adapter_builder.rs  io_adapters.rs  io_funcs.rs  io_params.rs  mod.rs
src/core/domain/: errors.rs  extract_project_stats.rs  mod.rs  transform.rs  update_readme.rs
src/pepy_tech_stats/: __main__.py
src/pepy_tech_stats/core/: logger.py
tests/: integration_tests.rs
