[package]
name = "pepy-tech-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pepy_tech_stats"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.42"
flexi_logger = "0.31.7"
itertools = "0.14.0"
log = "0.4.29"
polars = { version = "0.51.0", features = ["lazy", "temporal", "dtype-date", "dtype-datetime", "json"] }
pyo3 = "0.25.0"
regex = "1.12.2"
reqwest = {version = "0.12.24", features = ["blocking", "json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
test-case = "3.3.1"
thiserror = "2.0.17"
